# ggdes

./: .gitignore  @design_improvments.md  AGENTS.md  LICENSE  Makefile  README.md  check_analysis.py  code_audit.md  codex_analysis.md  example_context.json  example_context.yaml  future_work.md  fvec.yaml  ggdes.yaml  main.py  package-lock.json  package.json  pyproject.toml  ui_gaps.md  windowsfunc.yaml
.ggdes-local/kb/analyses/test-local-20260405-094045-a7b68f00/: metadata.yaml
.github/workflows/: ci.yml  docs.yml  install-test.yml  release.yml
.serena/: active_state.json  project.yml
.serena/memories/: overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: code-changes-test-20260405-100341-bc9012b9-design-document_-output-agents-_-llm-integration.md
ggdes/: __init__.py  cli.py  comparison.py  feedback.py  logging_config.py  pipeline.py  semantic_diff.py
ggdes/agents/: __init__.py  change_filter.py  coordinator.py  git_analyzer.py  skill_utils.py  technical_author.py
ggdes/agents/output_agents/: __init__.py  base.py  docx_agent.py  markdown_agent.py  pdf_agent.py  pptx_agent.py
ggdes/cli/: __init__.py  utils.py
ggdes/cli/commands/: analyze.py  compare.py  config_cmd.py  doctor.py  export_cmd.py  manage.py  resume.py  server.py  status.py
ggdes/config/: __init__.py  loader.py
ggdes/diagrams/: __init__.py  cache.py  llm_generator.py
ggdes/kb/: __init__.py  manager.py
ggdes/llm/: __init__.py  conversation.py  factory.py
ggdes/parsing/: __init__.py  ast_parser.py
ggdes/prompts/: __init__.py  loader.py
ggdes/prompts/v1.0.0/: change_filter.yaml  coordinator.yaml  git_analyzer.yaml  output.yaml  technical_author.yaml  validation.yaml
ggdes/rendering/: __init__.py  markdown_to_png.py
ggdes/review/: __init__.py  review.py  reviewer.py
ggdes/schemas/: __init__.py  enums.py  models.py
ggdes/skills/docx/: SKILL.md
ggdes/skills/docx/scripts/office/: soffice.py
ggdes/skills/docx/scripts/office/helpers/: simplify_redlines.py
ggdes/skills/docx/scripts/office/validators/: base.py
ggdes/skills/markdown/: SKILL.md
ggdes/skills/pdf/: SKILL.md
ggdes/skills/pdf/scripts/: check_bounding_boxes.py  check_fillable_fields.py  create_validation_image.py  extract_form_structure.py  fill_fillable_fields.py  fill_pdf_form_with_annotations.py
ggdes/skills/pptx/: SKILL.md
ggdes/skills/pptx/scripts/: clean.py  thumbnail.py
ggdes/skills/pptx/scripts/office/: pack.py  soffice.py
ggdes/skills/pptx/scripts/office/helpers/: merge_runs.py  simplify_redlines.py
ggdes/skills/pptx/scripts/office/validators/: docx.py  pptx.py
ggdes/tools/: __init__.py  chat_with_tools.py  definitions.py  executor.py
ggdes/tui/: __init__.py  app.py  debug_view.py  feedback_view.py
ggdes/utils/: __init__.py  lock.py
ggdes/validation/: __init__.py  code_references.py  validators.py
ggdes/web/: __init__.py
ggdes/worktree/: __init__.py  manager.py
tests/: __init__.py  test_ast_parser.py  test_change_filter.py  test_comparison.py  test_feedback.py  test_ggdes.py  test_pipeline.py  test_refactoring.py  test_rendering.py  test_schemas.py  test_semantic_diff.py  test_tools.py  test_validation.py
