[project]
name = "ggdes"
version = "0.1.0"
description = "Git-based Design Documentation Generator using Deep Agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.85.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "deepagents>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
ggdes = "ggdes.cli:main"

[tool.uv.sources]
ggdes = { workspace = true }

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
