[project]
name = "ggdes"
version = "0.1.0"
description = "Git-based Design Documentation Generator using Deep Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.85.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-cpp>=0.23.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "loguru>=0.7.0",
    # Document generation dependencies
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "reportlab>=4.0.0",
    "Pillow>=10.0.0",
    # Optional OCR dependencies (for scanned PDFs)
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    # PPTX text extraction
    "markitdown[pptx]>=0.1.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    # Type stubs for libraries without inline types
    "types-PyYAML>=6.0.0",
    "types-Markdown>=3.5.0",
    "types-Pygments>=2.18.0",
    "types-reportlab>=4.0.0",
    "types-defusedxml>=0.7.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]
render = [
    "playwright>=1.40.0",
    "markdown>=3.5.0",
]

[project.scripts]
ggdes = "ggdes.cli:main"

[tool.uv.sources]
ggdes = { workspace = true }

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "W293"]  # W293: blank line contains whitespace (in embedded CSS/HTML strings)
# Exclude skills scripts from linting (they are standalone helper scripts)
exclude = ["ggdes/skills/", "ggdes/skills/**"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
# Ignore missing stubs for optional dependencies (set to true to suppress all)
ignore_missing_imports = true
# Exclude skills scripts from type checking (they are standalone helper scripts)
# Exclude tests from type checking (test code typing issues tracked separately)
exclude = ["ggdes/skills/", "tests/", "check_analysis.py"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
